adding restler dependency to package.json

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "dependencies": {
         "express": "3.3.4",
         "ejs": "~0.8.4",
-        "jade": "*"
+        "jade": "*",
+        "restler": "*"
     },
     "scripts": {
         "test": "grunt test",
