--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-cookies": "~1.0.7",
     "angular-sanitize": "~1.0.7",
     "angular-bootstrap": "*",
-    "angular-strap": "*"
+    "angular-strap": "*",
+    "underscore": "*"
 
   },
   "devDependencies": {
