--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "express": "3.3.4",
         "ejs": "~0.8.4",
         "jade": "*",
-        "restler": "*"
+        "restler": "*",
+        "firebase" : "0.6.1"
     },
     "scripts": {
         "test": "grunt test",
