--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "matchdep": "~0.1.2",
         "connect-livereload": "~0.2.0",
         "grunt-google-cdn": "~0.2.0",
-        "grunt-ngmin": "~0.0.2"
+        "grunt-ngmin": "~0.0.2",
+        "restler": "~2.0.1"
     },
     "engines": {
         "node": ">=0.8.0"
